  Resources moved to standard src/main/resources directory
  DefaultEntityConnectionServer now extends AbstractServer<AbstractRemoteEntityConnection, EntityConnectionServerAdmin>
  Some javadoc improvements
  Entities.getColumnProperties() and DateUtil.floorFields(), vararg parameter replaced with a collection
  LoggerProxy added, LogbackProxy module added, Logback dependencies removed
  Some build file improvements
  Build file streamlined a bit, deployment targets improved
  Server monitor ivy dependencies fixed, maven no longer pulls local db jar along
  Log4jProxy plugin module added
  Throw exception instead of returning null in a few cases
  RemoteEntityConnection moved from framework.db to framework.db.remote, server now depends on db-remote, test moved
  Abstract unit test classes in framework-model-unittests moved to package framework.model.testing
  module-info.java added for common and framework modules, ignored during build
  AbstractEntityConnectionProvider refactored a bit
  EntityConditions refactored, ForeignKeyCondition and EntityKeyCondition classes removed
  EntityDefinition.getForeignKeyReferences() added
  EntityConditions refactored some more, bug fixed, null condition tests added
  deploy.tsaurl build property added and used
  DefaultKey.isNull(), returns true if any non-nullable properties have null values, computeHashCode() added
  Primary key properties are now automatically configured as not-null
  Entities.Validator null validation bug fixed
  DefaultKey.getFirstValue() no longer uses Iterator.next()
  Optimized for single value keys
  EntityConnectionServerAdmin.ThreadStatistics.getThreadStateCount() added
  EntityConnectionServerAdmin.getSystemCpuLoad() and getProcessCpuLoad() added
  ServerMonitor and ServerMonitorPanel display the above
  DefaultKey now validates the value type, some hashCode refactoring